  [Michele Simionato]
  * Implemented Risk Targeted Disaggregations for the AELO project
  * Enabled the pointsource_distance approximation by default at 100 km
  * Fixed an error with sources below the minimum_magnitude
  * Introduced support for SLURM (experimental)
  * Fixed bug in conditioned GMFs, due to the station sites being excluded
    from the complete site collection
  * Reduced slow tasks and memory consumption
    in the event_based_risk calculator (3x for Chile)

  [Paolo Tormene]
  * Raise an error if files specified in site_model_file do not have the same
    headers
  * Give a better error message for risk calculations where the aggregate_by
    tag is specified but it doesn't exist in the exposure model

  [Michele Simionato]
  * Improved error message when quantiles are not supported in event based risk
  * Reduced memory consumption in the master node in post_risk
  * Reduced slow tasks in the ebrisk calculator and memory consumption
    in the master node

  [Paolo Tormene]
  * Fixed bug #8907: unable to run ClassicalDamage demo on Windows

  [Astha Poudel, Anirudh Rao, Paolo Tormene]
  * Updates to the infrastructure risk assessment and connectivity analysis
    module to incorporate additional performance metrics including Complete
    Connectivity Loss (CCL), Partial Connectivity Loss (PCL), Weighted
    Connectivity Loss (WCL), and Efficiency Loss (EL) based on
    Poudel et al. (2023).
  * Implemented the possibility of including both weighted and unweighted
    graphs for infrastructure risk.
  * Implemented the possibility of including simple undirected graphs, simple
    directed graphs, multigraphs and multi-directed graphs.
  * Implemented the Bradley (2012) cross-correlation equations between peak
    ground velocity (PGV), peak ground acceleration (PGA), and 5% damped
    pseudo-spectral acceleration (SA)

  [Michele Simionato]
  * Moved the generation of the hazard curves from the GMFs in post_execute