@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Fixed a bug when exporting `risk_by_event` in absence of ruptures
+  * Fixed a bug by not exporting `event_based_mfd` in absence of ruptures
   * Implemented Risk Targeted Disaggregations for the AELO project
   * Enabled the pointsource_distance approximation by default at 100 km
   * Fixed an error with sources below the minimum_magnitude
